[gd_scene load_steps=2 format=3 uid="uid://igq04hlnjl5g"]

[ext_resource type="Script" path="res://assets/script/MutiplayerController.gd" id="1_jrevf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrevf")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 952.0
offset_top = 580.0
offset_right = 1129.0
offset_bottom = 628.0
text = "主持游戏"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 953.0
offset_top = 520.0
offset_right = 1130.0
offset_bottom = 568.0
text = "加入游戏"

[node name="Address" type="LineEdit" parent="Join"]
layout_mode = 0
offset_left = -386.0
offset_top = 2.0
offset_right = -134.0
offset_bottom = 49.0
text = "127.0.0.1"

[node name="Port" type="LineEdit" parent="Join"]
layout_mode = 0
offset_left = -119.0
offset_top = 2.0
offset_right = -17.0
offset_bottom = 49.0
text = "9285"

[node name="StartGame" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 957.0
offset_top = 56.0
offset_right = 1134.0
offset_bottom = 104.0
text = "开始"

[node name="name_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 70.0
offset_right = 122.0
offset_bottom = 96.0
text = "游戏名"

[node name="name" type="LineEdit" parent="name_Label"]
layout_mode = 0
offset_left = 81.0
offset_top = -2.0
offset_right = 433.0
offset_bottom = 29.0

[node name="map_OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 744.0
offset_top = 61.0
offset_right = 967.0
offset_bottom = 103.0

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
